--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ button:hover{
         width: 60%;
         padding: 10px;
         margin-top: 10px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
 }
 
@@ -92,5 +93,17 @@ button:hover{
     #mockup{
         width: 90%;
     }
-    
+    button{
+        padding:5px 20px;
+        /* width: 50%; */
+        background-color: white;
+        margin: 20px 0;
+       
+    }
+    .sm{
+        width: 30px;
+        float: right;
+        margin: 0 5px;
+        
+    }
 }
